--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,8 @@
     "bower": "^1.7.9",
     "colors": "^1.1.2",
     "mime": "^1.3.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.2"
   }
 }
