--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "Servidor Web estatico en node",
   "main": "server.js",
   "authors": [
-    "vidalstephanie259@gmail.com"
+    "@rosa"
   ],
   "license": "ISC",
   "keywords": [
@@ -11,7 +11,8 @@
     "static-server",
     "web"
   ],
-  "homepage": "https://github.com/stephanie-1992/lab02-static-server",
+  "homepage": "https://github.com/Rosa93/lab02-static-server",
+  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
@@ -20,6 +21,8 @@
     "tests"
   ],
   "dependencies": {
-    "sweetalert": "^1.1.3"
+    "sweetalert": "^1.1.3",
+    "jquery": "2.2.4",
+    "materialize": "^0.97.7"
   }
 }
