--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lab02-static-server",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Servidor Web estatico en node",
   "main": "server.js",
   "scripts": {
@@ -23,9 +23,10 @@
   },
   "homepage": "https://github.com/stephanie-1992/lab02-static-server#readme",
   "dependencies": {
-    "bower": "^1.7.9",
     "colors": "^1.1.2",
-    "mime": "^1.3.4"
+    "mime": "^1.3.4",
+    "mongodb": "^2.2.4",
+    "sweetalert": "^1.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
